# FastAPI-Planner

./: 2022.ipynb  README.md  main.py  pyproject.toml
models/: events.py  users.py
routes/: events.py  users.py
