[tool.poetry]
name = "planner"
version = "0.1.0"
description = ""
authors = ["Kim Sanghae <pelikan@pusan.ac.kr>"]
#readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
